2026-01-11

- Extended scripts for macOS operating system:
  Moved console into main thread (macOS GUI requirement!),
  moved Mapsforge server and QMapShack completely into own threads
  Extended operating system dependent code to include macOS
  Extended README to include macOS
- Redesigned communication between threads and console

2025-12-27

- Show QMapShack version when available
- Show QMapShack path
- Added switch to disable QMapShack high DPI scaling
- Changed default task from "(default)" to ""
- Fixed script aborting on missing overlay layer in xml theme file
- Minor README modifications

2025-11-01

- Allow add/delete/toggle tasks while server is running
- Check at "Start" button press if QMapShack already running
- Dropped support of server version < 0.22.0.0
- Corrected some localized texts
- Minor script optimizations

2025-10-14

- Adding internal render themes dynamically from current server's assets
- Improved internal render themes and their overlays handling
- Setting an operating system-dependent temporary directory environment 
  for use by script and internally called applications 
- Added french translation (Help with translation errors is welcome!) 

2025-10-06

- Added overlay selection for internal render themes
  (currently "BIKER", "DARK", "INDIGO" and "MOTORIDER")

2025-10-05

- Added new QMapShack settings menu
  Removed qms_args from "Mapsforge-for-QMapShack.ini" instead
- Workaround running script by "Open with" on Windows (Fatal Qt6 issue!)
- Minor script optimizations

2025-09-25

- Fixed script aborting when previous theme file no longer exists
- Improved moving focus by mouse button 1 click away from text input fields
- Added new internal render themes "DARK" and "INDIGO"
  (server version >= 0.26.1.0)

2025-08-27

- Speed up console output
- Hidden console window no longer reduces performance
- For performance reasons, console output window
  can now be disabled during console output generation