@@ -37,10 +37,13 @@ e02	"Prozess durch 'kill' beenden\nund neu starten?"
 e03	"Betriebssytem %s nicht unterstützt"
 e04	"Befehl '%s'\ngesetzt durch Variable '%s' ist nicht ausführbar"
 e05	"Ordner/Datei '%s'\ngesetzt durch Variable '%s' existiert nicht"
-e06	"Karten- und/oder Kachelordner von QMapShack noch nicht definiert!\nSetze Ordner in QMapShack über 'Datei -> Kartenverzeichnisse angeben'"
+e06	"Keine Mapsforge-Karte gefunden"
 e07	"%s-Version ist '%s'.\nMindestens Version '%s' ist erforderlich!"
 e08	"%s-Version kann nicht aus der Befehlsausgabe bestimmt werden!\n\nBefehl:\n%s\nAusgabe:\n%s"
-e11	"Keine Mapsforge-Karte gefunden"
+
+e15	"QMapShack Karten- und/oder Kachelordner noch nicht definiert.\nSetze Ordner in QMapShack über 'Datei -> Kartenverzeichnisse angeben'"
+e16	"QMapShack Kartenordner\n'%s'\nist nicht beschreibbar"
+e17	"QMapShack Kartendatei\n'%s'\nkann nicht erstellt werden"
 
 c01	"Overlays zum Stil auswählen"
 c02	"Schummerung konfigurieren"
