@@ -37,10 +37,13 @@ e02	"Terminate process by 'kill'\nand restart?"
 e03	"Operating system %s not supported"
 e04	"Command '%s'\nset by variable '%s' is not executable"
 e05	"Folder/file '%s'\nset by variable '%s' does not exist"
-e06	"QMapShack's map and/or cache folders not yet defined!\nSet folders in QMapShack by 'File -> Setup Map Paths'"
+e06	"No Mapsforge map found"
 e07	"%s version is '%s'.\nAt least version '%s' is required!"
 e08	"%s version cannot be determined from command output!\n\nCommand:\n%s\nOutput:\n%s"
-e11	"No Mapsforge map found"
+
+e15	"QMapShack map and/or cache folders not yet defined.\nSet folders in QMapShack by 'File -> Setup Map Paths'"
+e16	"QMapShack map folder\n'%s'\nis not writable"
+e17	"QMapShack map file\n'%s'\ncannot be created"
 
 c01	"Select overlays for style"
 c02	"Configure hillshading"
