@@ -37,10 +37,13 @@ e02	"Terminer le processus avec «kill» et redémarrer?"
 e03	"Système opérateur non pris en charge"
 e04	"La commande '%s'\ndéfinie par la variable '%s' n'est pas exécutable"
 e05	"Le dossier/fichier '%s'\ndéfini par la variable '%s' n'existe pas"
-e06	"Le dossier de carte et/ou de tuiles QMapShack n'est pas encore défini!\nDéfinir le dossier dans QMapShack via 'Fichier -> Configurer les répertoires des cartes'"
+e06	"Aucune carte Mapsforge trouvée"
 e07	"La version %s est '%s'.\nAu moins la version '%s' est requise!"
 e08	"Impossible de déterminer la version %s à partir de la sortie de commande!\n\nCommande:\n%s\nSortie:\n%s"
-e11	"Aucune carte Mapsforge trouvée"
+
+e15	"Le dossier de carte et/ou de tuiles QMapShack n'est pas encore défini.\nDéfinir le dossier dans QMapShack via 'Fichier -> Configurer les répertoires des cartes'"
+e16	"Le dossier de carte QMapShack\n'%s'\nn'est pas accessible en écriture"
+e17	"Le fichier de carte QMapShack\n'%s'\nne peut pas être créé"
 
 c01	"Sélection des superpositions pour le style"
 c02	"Configurer l'ombrage du relief"
