@@ -1,3 +1,7 @@
+2026-01-13
+
+- Fixed script aborting when QMapShack map folder or file not writable
+
 2026-01-11
 
 - Extended scripts for macOS operating system:
